# realtime-translator-demo

./: README.md  docker-compose.yml  rabbitmq.conf
conf/: definitions.json  rabbitmq.conf
n8n/: tts_demo_workflow.json
scripts/: send_file_to_n8n.py
whisper_turbo_selfhosted/backend/: .dockerignore  .env-example  Dockerfile  jobs.py  main.py  model.py  processing.py  pyproject.toml  requirements.txt  rmq.py  schemas.py  settings.py  speech_to_text.py  text_to_speech.py  translation.py  utils.py
whisper_turbo_selfhosted/frontend/whisper-realtime-frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
whisper_turbo_selfhosted/frontend/whisper-realtime-frontend/src/: App.css  App.jsx  main.jsx
whisper_turbo_selfhosted/frontend/whisper-realtime-frontend/src/components/: Home.jsx  SendReceiveAudioChunks.jsx  UploadDemo.jsx  VibeStream.jsx
whisper_turbo_selfhosted/frontend/whisper-realtime-frontend/src/utils/: constants.js
