[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aio-pika>=9.5.5",
    "aiofiles>=24.1.0",
    "apscheduler>=3.11.0",
    "backoff>=2.2.1",
    "coqpit-config>=0.2.0",
    "coqui-tts>=0.26.1",
    "fastapi>=0.115.12",
    "openai-whisper>=20240930",
    "piper-tts>=1.2.0",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "python-multipart>=0.0.20",
    "scipy>=1.15.3",
    "sentencepiece>=0.2.0",
    "transformers>=4.52.3",
    "uvicorn>=0.34.2",
]

